--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ body {
   color: #665C4B;
   overflow: auto;
 }    
-#navbar2 h1 {
+#navbar2 h2 {
   float: left;
   padding: 10px;
   margin: 0;
 }
-#navbar2 h1 img {
+#navbar2 h2 img {
   width: 60px;
 }
 
@@ -273,7 +273,7 @@ img {
 	display: flex;
 	flex-wrap: wrap;
 	margin:auto;
-	padding: auto;
+	padding: 20px;
   background-color: #fff;
   justify-content: center;
 }
@@ -284,8 +284,8 @@ img {
 
 .josefin-sans {
   font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
+  font-size: 16px;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -317,7 +317,7 @@ img {
 	display: flex;
 	flex-wrap: wrap;
 	margin:auto;
-	padding: auto;
+	padding: 10px;
   background-color: #fff;
   justify-content: center;
 }
